--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   </head>
 
-  <body>
+  <body class="dark-mode">
     <header>
       <div class="container">
           <nav class="navbar">
@@ -51,9 +51,9 @@
               <div class="menu-navbar-right">
                 <ul class="list">
                   <li class="limenuRight"><a href="index.html">Home</a></li>
-                  <li class="limenuRight"><a href="index_actions.html">Actions</a></li>
-                  <li class="limenuRight"><a href="index_project.html">Projects</a></li>
-                  <li class="limenuRight"><a href="index_messages.html">Messages</a></li>
+                  <li class="limenuRight"><a href="./404.html">Actions</a></li>
+                  <li class="limenuRight"><a href="./404.html">Projects</a></li>
+                  <li class="limenuRight"><a href="./404.html">Messages</a></li>
                   <li class="limenuRight"><a href="index_about.html">About</a></li>
                   <li class="limenuRight">
                       <div class="toggle-btn _1st-toggle-btn" id="mode-link">
