--- a/index_about.html
+++ b/index_about.html
@@ -37,7 +37,7 @@
     
   </head>
 
-<body>
+<body class="dark-mode">
   <header>
     <div class="container">
         <nav class="navbar">
@@ -48,9 +48,9 @@
             <div class="menu-navbar-right">
               <ul class="list">
                 <li class="limenuRight"><a href="index.html">Home</a></li>
-                <li><a href="index_actions.html">Actions</a></li>
-                <li><a href="index_project.html">Projects</a></li>
-                <li><a href="index_messages.html">Messages</a></li>
+                <li class="limenuRight"><a href="./404.html">Actions</a></li>
+                <li class="limenuRight"><a href="./404.html">Projects</a></li>
+                <li class="limenuRight"><a href="./404.html">Messages</a></li>
                 <li><a href="index_about.html"><b>About</b></a></li>
                 <li>
                     <div class="toggle-btn _1st-toggle-btn" id="mode-link">
