--- a/404.html
+++ b/404.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="./assets/css/style_navbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-8S5/LAB9s6rxLvggnUpPA6vfUdF1fQ2wiSs6VgkSO4cQcQ72xQexzxt+V/IZUPZI" crossorigin="anonymous">
 
+
+
     <!-- Footer -->
     <link href="./assets/css/style_footer.css" rel="stylesheet" type="text/css">
     <link href="./assets/css/style_darkmode.css" rel="stylesheet" type="text/css">
@@ -58,15 +60,12 @@
         </nav> 
       </div>
     </header>
-  <!--_______________________________________________________________ [ Star ] ____________________-->
-    <div class="stars">
-      <div id="stars"></div>
-      <div id="stars2"></div>
-      <div id="stars3"></div>
+
+    <div class="main">
+        <img src="./assets/image/Ai.jpg" alt="Hoshino Ai">
+        <h2>Sorry, the website is under maintenance, please come back later! </h2>
     </div>
 
-    <!--_______________________________________________________________ [ Count view-er ] ____________________-->
-    <!-- <p class="coutn" >View: <span id="visitCount">0</span></p> -->
 
     <!--_______________________________________________________________ [ Footer ] ____________________-->
     <footer id="footer" class="footer">
