--- a/index_about.html
+++ b/index_about.html
@@ -37,7 +37,7 @@
     
   </head>
 
-<body class="dark-mode">
+<body>
   <header>
     <div class="container">
         <nav class="navbar">
@@ -96,7 +96,7 @@
       <div class="fact-content">
         <h4>꧁___________ Fact ___________꧂</h4>
         <div class="fact-span">
-          <p>Waifu: 
+          <p>Waifu:
             <a class="kurumi waifu" href="https://www.pinterest.com/ninomemories/tokisaki-kurumi-waifu/" target="_blank"> Tokisaki Kurumi (DaL)</a>, 
             <a class="elysia waifu" href="https://www.pinterest.com/ninomemories/elysia/" target="_blank"> Elysia (HI3)</a>, 
             <a class="hoshinoAi waifu" href="https://www.pinterest.com/ninomemories/oshi-no-ko/" target="_blank"> Hoshino Ai (Oshi no Ko)</a>.</p></div>
