--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   </head>
 
-  <body class="dark-mode">
+  <body>
     <header>
       <div class="container">
           <nav class="navbar">
@@ -109,14 +109,12 @@
       
       </div>
     </div>
-
-
   <!--_______________________________________________________________ [ Star ] ____________________-->
-    <div class="stars">
+    <!-- <div class="stars">
       <div id="stars"></div>
       <div id="stars2"></div>
       <div id="stars3"></div>
-    </div>
+    </div> -->
 
     <!-- _______________________________________________________________ [ Waves ] ____________________-->
     <div class="div-wave">
