--- a/index_actions.html
+++ b/index_actions.html
@@ -26,7 +26,7 @@
   <!-- Script -->
   <script src="./assets/js/js_index.js"></script>
 
-<body class="dark-mode">
+<body>
   <header>
     <div class="container">
         <nav class="navbar">
