--- a/404.html
+++ b/404.html
@@ -15,20 +15,19 @@
 
     <title>Tokisaki Nino</title>
     <link rel="icon" href="./assets/image/Avt_cicle.ico">
+
+
     <!-- style chung -->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/reponsive.css">
     <link rel="stylesheet" href="./assets/css/404.css">
   
     <!-- navbar -->
-    <link rel="stylesheet" href="./assets/css/style_navbar.css">
+    <link rel="stylesheet" href="./assets/css/navbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-8S5/LAB9s6rxLvggnUpPA6vfUdF1fQ2wiSs6VgkSO4cQcQ72xQexzxt+V/IZUPZI" crossorigin="anonymous">
 
-
-
+    <link rel="stylesheet" href="./assets/css/home.css">
     <!-- Footer -->
-    <link href="./assets/css/style_footer.css" rel="stylesheet" type="text/css">
-    <link href="./assets/css/style_darkmode.css" rel="stylesheet" type="text/css">
+    <link href="./assets/css/footer.css" rel="stylesheet" type="text/css">
 
   </head>
 
@@ -63,9 +62,22 @@
 
     <div class="main">
         <img src="./assets/image/Ai.jpg" alt="Hoshino Ai">
-        <h2>Sorry, the website is under maintenance, please come back later! </h2>
+        <h2>Sorry, the website is under maintenance, please come back later! 😉</h2>
     </div>
 
+    <!--_______________________________________________________________ [ Bubble ] ____________________-->
+    <ul class="circles">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
 
     <!--_______________________________________________________________ [ Footer ] ____________________-->
     <footer id="footer" class="footer">
