--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link href="./assets/css/contact.css" rel="stylesheet" type="text/css">  
     
     <!-- Footer -->
-    <link href="./assets/css/style_footer.css" rel="stylesheet" type="text/css">
+    <link href="./assets/css/footer.css" rel="stylesheet" type="text/css">
     <!-- <link href="./assets/css/light_mode.css" rel="stylesheet" type="text/css"> -->
 
   </head>
