--- a/index_about.html
+++ b/index_about.html
@@ -13,20 +13,18 @@
     <link href="./assets/css/css2/style_about.css" rel="stylesheet" type="text/css">
   
     <!-- navbar -->
-    <link rel="stylesheet" href="./assets/css/style_navbar.css">
+    <link rel="stylesheet" href="./assets/css/navbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-8S5/LAB9s6rxLvggnUpPA6vfUdF1fQ2wiSs6VgkSO4cQcQ72xQexzxt+V/IZUPZI" crossorigin="anonymous">
   
     <!-- Button MXH - Contact -->
     <link href="https://fonts.googleapis.com/css?family=Raleway+Dots" rel="stylesheet" type="text/css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="./assets/css/style_button.css" rel="stylesheet" type="text/css">  
     
     <!-- Footer -->
-    <link href="./assets/css/style_footer2.css" rel="stylesheet" type="text/css">
-    <link href="./assets/css/style_darkmode.css" rel="stylesheet" type="text/css">
+    <link href="./assets/css/footer.css" rel="stylesheet" type="text/css">
 
     <!-- Stars -->
-    <link href="./assets/css/style_main_stars.css" rel="stylesheet" type="text/css">
+    <link href="./assets/css/home_stars.css" rel="stylesheet" type="text/css">
 
     <!-- Back to top - Style-->
     <link href="./assets/css/style_scrolltotop.css" rel="stylesheet" type="text/css">
@@ -80,7 +78,9 @@
         <h4>꧁___________ Information ___________꧂</h4>
         <div class="id-name">Full name: Tokisaki Nino (Sugoii).</div>
         <div class="id-name">Age: 18 (Maybe).</div>
-        <div class="id-name">Learning & using language: <a href="https://github.com/TokisakiNinoVn?tab=repositories&q=&type=&language=c%2B%2B&sort=" target="_blank"> C/C++</a>, <a href="https://github.com/TokisakiNinoVn?tab=repositories&q=&type=&language=java&sort=" target="_blank"> Java</a>.</div>
+        <div class="id-name">Learning & using language: 
+          <a href="https://github.com/TokisakiNinoVn?tab=repositories&q=&type=&language=c%2B%2B&sort=" target="_blank"> C/C++</a>, 
+          <a href="https://github.com/TokisakiNinoVn?tab=repositories&q=&type=&language=java&sort=" target="_blank"> Java</a>, C#, Py.</div>
         <div class="id-name">Discord: <a href="https://discord.com/channels/@me/1045872179440525323" target="_blank">tokisakinino</a>.</div>
       </div>
       <h4>꧁___________ Game ___________꧂</h4>
