--- a/404.html
+++ b/404.html
@@ -49,7 +49,7 @@
                   <li class="limenuRight"><a href="./404.html">Messages</a></li>
                   <li class="limenuRight"><a href="index_about.html">About</a></li>
                   <li class="limenuRight">
-                      <div class="toggle-btn _1st-toggle-btn" id="mode-link">
+                      <div class="toggle-btn _1st-toggle-btn" id="mode-link" onclick="toggleLightMode()">
                         <input type="checkbox">
                         <span></span>
                       </div>
