--- a/index_about.html
+++ b/index_about.html
@@ -51,7 +51,7 @@
                 <li class="limenuRight"><a href="./404.html">Messages</a></li>
                 <li><a href="index_about.html"><b>About</b></a></li>
                 <li>
-                    <div class="toggle-btn _1st-toggle-btn" id="mode-link">
+                    <div class="toggle-btn _1st-toggle-btn" id="mode-link" onclick="toggleLightMode()">
                       <input type="checkbox">
                       <span></span>
                     </div>
