--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@
   </head>
 
   <body class="dark-mode">
- <header>
+    <!-- <header>
       <div class="container">
           <nav class="navbar">
             <div class="navbar-header-logo">
@@ -58,11 +58,12 @@
               </div>
         </nav> 
       </div>
-    </header>
+    </header> -->
 
     <div class="main">
         <img src="./assets/image/Ai.jpg" alt="Hoshino Ai">
         <h2>Sorry, the website is under maintenance, please come back later! 😉</h2>
+        <a href="./index.html">Back to Home.</a>
     </div>
 
     <!--_______________________________________________________________ [ Bubble ] ____________________-->
@@ -80,12 +81,12 @@
     </ul>
 
     <!--_______________________________________________________________ [ Footer ] ____________________-->
-    <footer id="footer" class="footer">
+    <!-- <footer id="footer" class="footer">
       <div class="copyright">
         <span class = "real">[💖Sugoii Family - By Tokisaki Nino💖] <p class="coutn" > [Views: <span id="visitCount">0</span>]</p></span>
         
       </div>
-    </footer>   
+    </footer>    -->
 
     <!--_______________________________________________________________ [ JavaScripts ] ____________________-->
     <script src="./assets/js/js_index.js"></script>
