--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <ul class="list">
                   <li class="limenuRight"><a href="index.html">Home</a></li>
                   <li class="limenuRight"><a href="./404.html">Actions</a></li>
-                  <li class="limenuRight"><a href="./404.html">Projects</a></li>
+                  <li class="limenuRight"><a href="./index_project.html">Projects</a></li>
                   <li class="limenuRight"><a href="./404.html">Messages</a></li>
                   <li class="limenuRight"><a href="index_about.html">About</a></li>
                   <li class="limenuRight">
@@ -75,7 +75,7 @@
           <img class="myavt" src="./assets/image/Avt.jpg">
         </div> 
         <div class="name">Tokisaki Nino</div>
-        <p class="description"> What kind of person do you expect me to be? Normal partner? Self-training subjects? A social acquaintance... or... an important teammate? Based on your attitude and expectations, I will "play" or "become" one of them." - Yelan - Genshin Impact.</p>
+        <p class="description"> What kind of person do you expect me to be? Normal partner? Self-training subjects? A social acquaintance... or... an important teammate? Based on your attitude and expectations, I will "play" or "become" one of them".</p>
       <section>
         <ul id="services">
           <li>
