--- a/index_project.html
+++ b/index_project.html
@@ -39,9 +39,9 @@
               <div class="menu-navbar-right">
                 <ul class="list">
                   <li class="limenuRight"><a href="index.html">Home</a></li>
-                  <li><a href="index_actions.html">Actions</a></li>
+                  <li><a href="./404.html">Actions</a></li>
                   <li><a href="index_project.html"><b>Projects</b></a></li>
-                  <li><a href="index_messages.html">Messages</a></li>
+                  <li><a href="./404.html">Messages</a></li>
                   <li><a href="index_about.html">About</a></li>
                   <li>
                       <div class="toggle-btn _1st-toggle-btn" id="mode-link">
@@ -62,20 +62,27 @@
     </div>  -->
 
     <div class="main">
-      <div class="list_project">
-        <img src="" alt="" class="preview">
-        <a href="" class="link_project"></a>
+      <h1 class="title">My Project</h1>
+
+      <div class="project">
+        <div class="list_project">
+          <img src="" alt="" class="preview">
+          <div class="div_link">
+            <a href="" class="link_project"><span></span></a>            
+          </div>
+        </div>
       </div>
+
     </div> 
 
     <button class="scrollToTopBtn "></button>
 
-    <footer id="footer" class="footer">
+    <!-- <footer id="footer" class="footer">
       <div class="copyright">
         <span class = "real">[💖Sugoii Family - By Tokisaki Nino💖]</span>
       </div>
 
-    </footer>
+    </footer> -->
     
     <script src="./assets/js/js_index.js"></script>
     <!-- <script src="./assets/js/js_project_github.js"></script> -->
