--- a/index_about.html
+++ b/index_about.html
@@ -47,7 +47,7 @@
               <ul class="list">
                 <li class="limenuRight"><a href="index.html">Home</a></li>
                 <li class="limenuRight"><a href="./404.html">Actions</a></li>
-                <li class="limenuRight"><a href="./404.html">Projects</a></li>
+                <li class="limenuRight"><a href="./index_project.html">Projects</a></li>
                 <li class="limenuRight"><a href="./404.html">Messages</a></li>
                 <li><a href="index_about.html"><b>About</b></a></li>
                 <li>
