--- a/index_project.html
+++ b/index_project.html
@@ -62,7 +62,7 @@
     </div>  -->
 
     <div class="main">
-      <h1 class="title">My Project</h1>
+      <span class="title">My Project</span>
 
       <div class="project">
         <div class="list_project">
