--- a/index_about.html
+++ b/index_about.html
@@ -80,7 +80,10 @@
         <div class="id-name">Age: 18 (Maybe).</div>
         <div class="id-name">Learning & using language: 
           <a href="https://github.com/TokisakiNinoVn?tab=repositories&q=&type=&language=c%2B%2B&sort=" target="_blank"> C/C++</a>, 
-          <a href="https://github.com/TokisakiNinoVn?tab=repositories&q=&type=&language=java&sort=" target="_blank"> Java</a>, C#, Py.</div>
+          <a href="https://github.com/TokisakiNinoVn?tab=repositories&q=&type=&language=java&sort=" target="_blank"> Java</a>,
+          <a href="" target="_blank"> C#</a>,
+          <a href="" target="_blank"> Python</a>.
+        </div>
         <div class="id-name">Discord: <a href="https://discord.com/channels/@me/1045872179440525323" target="_blank">tokisakinino</a>.</div>
       </div>
       <h4>꧁___________ Game ___________꧂</h4>
@@ -96,7 +99,7 @@
       <div class="fact-content">
         <h4>꧁___________ Fact ___________꧂</h4>
         <div class="fact-span">
-          <p>Waifu:
+          <p class="p-waifu">Waifu:
             <a class="kurumi waifu" href="https://www.pinterest.com/ninomemories/tokisaki-kurumi-waifu/" target="_blank"> Tokisaki Kurumi (DaL)</a>, 
             <a class="elysia waifu" href="https://www.pinterest.com/ninomemories/elysia/" target="_blank"> Elysia (HI3)</a>, 
             <a class="hoshinoAi waifu" href="https://www.pinterest.com/ninomemories/oshi-no-ko/" target="_blank"> Hoshino Ai (Oshi no Ko)</a>.</p></div>
