--- a/index_about.html
+++ b/index_about.html
@@ -75,7 +75,7 @@
         <p class="text-hello">🌺Hello!👋I'm Nino! Nice to meet you!🌺</p>
       </div>
       <div class="name-more">
-        <h4>꧁___________ Information ___________꧂</h4>
+        <h4>꧁_________ Information _________꧂</h4>
         <div class="id-name">Full name: Tokisaki Nino (Sugoii).</div>
         <div class="id-name">Age: 18 (Maybe).</div>
         <div class="id-name">Learning & using language: 
