--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
   </head>
 
   <body id="light-mode">
+
+    <div class="loader-wrapper">
+      <div class="loader"></div>
+      <div class="window-left" id="window-left"></div>
+      <div class="window-right" id="window-right"></div>
+    </div>
+
     <header>
       <div class="container">
           <nav class="navbar">
