--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="main">
       <div class="profile">
         <div class="avt"> 
-          <img class="myavt" src="./assets/image/Avt.jpg">
+          <img id="my_avt" class="myavt" src="./assets/image/Avt.jpg">
         </div> 
         <div class="name">Tokisaki Nino</div>
         <p class="description"> What kind of person do you expect me to be? Normal partner? Self-training subjects? A social acquaintance... or... an important teammate? Based on your attitude and expectations, I will "play" or "become" one of them".</p>
@@ -164,7 +164,9 @@
     <!--_______________________________________________________________ [ Footer ] ____________________-->
     <footer id="footer" class="footer">
       <div class="copyright">
-        <span class = "real">[💖Sugoii Family - By Tokisaki Nino💖] <p class="coutn" > [Views: <span id="visitCount">0</span>]</p></span>
+        <span class = "real">[💖Sugoii Family - By&nbsp<a href="https://github.com/TokisakiNinoVn" target="_blank">Tokisaki Nino</a>💖] 
+          <!-- <p class="coutn" > [Views: <span id="visitCount">0</span>]</p> -->
+        </span>
         
       </div>
     </footer>
