--- a/index_about.html
+++ b/index_about.html
@@ -78,7 +78,7 @@
           <h4>꧁_________ Information _________꧂</h4>
           <div class="id-name">Full name: Tokisaki Nino (Sugoii).</div>
           <div class="id-name">Age: 18 (Maybe).</div>
-          <div class="id-name">Learning & using language: 
+          <div class="id-name">Skills: 
             <a href="https://github.com/TokisakiNinoVn?tab=repositories&q=&type=&language=c%2B%2B&sort=" target="_blank"> C/C++</a>, 
             <a href="https://github.com/TokisakiNinoVn?tab=repositories&q=&type=&language=java&sort=" target="_blank"> Java</a>,
             <a href="" target="_blank"> C#</a>,
@@ -93,15 +93,17 @@
         </div>
         <div class="anime">
           <h4>꧁___________ Anime ___________꧂</h4>
-          <p>Hashtag: #romcom #reallife #school #truelove #vampire #drama #shounen | <a href="https://anilist.co/user/NNino/" target="_blank"> MyAnimeList</a></p>
+          <p>Like hashtag: #romcom #reallife #school #truelove #vampire #drama #shounen,... | <a href="https://anilist.co/user/NNino/" target="_blank"> MyAnimeList</a>.</p>
         </div>
         <div class="fact-content">
           <h4>꧁___________ Fact ___________꧂</h4>
-          <div class="fact-span">
+          <!-- <div class="fact-span">
             <p class="p-waifu">Waifu:
               <a class="kurumi waifu" href="https://www.pinterest.com/ninomemories/tokisaki-kurumi-waifu/" target="_blank"> Tokisaki Kurumi (DaL)</a>, 
               <a class="elysia waifu" href="https://www.pinterest.com/ninomemories/elysia/" target="_blank"> Elysia (HI3)</a>, 
-              <a class="hoshinoAi waifu" href="https://www.pinterest.com/ninomemories/oshi-no-ko/" target="_blank"> Hoshino Ai (Oshi no Ko)</a>.</p></div>
+              <a class="hoshinoAi waifu" href="https://www.pinterest.com/ninomemories/oshi-no-ko/" target="_blank"> Hoshino Ai (Oshi no Ko)</a>.
+            </p>
+          </div> -->
           <div class="fact-span"><p>Girlfriend? I haven't thought about it yet, but if possible I'd like her to like Anime as well because I can cosplay the characters she likes and I also like her to have the "Yandere" personality - it's probably normal huh?.</p></div>
           <div class="fact-span"><p>My favorite quote: "What kind of person do you expect me to be? Normal partner? Self-training subjects? A social acquaintance... or... an important teammate? Based on your attitude and expectations, I will "play" or "become" one of them." - Yelan - Genshin Impact.</p></div>
           <div class="fact-span"><p>My hashtag: #Sugoii.F #LoveYandere #Anime #Kurumi #Traverler #Captain #Blueblood #Whriteroom</p>
