--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <div class="menu-navbar-right">
                 <ul class="list">
                   <li class="limenuRight"><a href="index.html">Home</a></li>
-                  <li class="limenuRight"><a href="./404.html">Actions</a></li>
+                  <li class="limenuRight"><a href="./404.html">Posts</a></li>
                   <li class="limenuRight"><a href="./index_project.html">Projects</a></li>
                   <li class="limenuRight"><a href="./404.html">Messages</a></li>
                   <li class="limenuRight"><a href="index_about.html">About</a></li>
