--- a/index_about.html
+++ b/index_about.html
@@ -64,10 +64,40 @@
     </header>
 
     <div class="main">
-        <div class="stars">
+        <!-- <div class="stars">
             <div id="stars"></div>
             <div id="stars2"></div>
             <div id="stars3"></div>
+        </div> -->
+
+
+        <div class="background_img">
+            <img src="./assets/image/bgr.jpg" alt="">
+        </div>
+
+        <div class="name_basic">
+            <div class="name_center">
+                <div class="name_left">
+                    <div class="img_avatar">
+                        <img class="img_avatar" src="./assets/image/Avt.jpg" alt="avt">
+                        <img class="frame_avatar" src="./assets/image/frame_1.webp" alt="frame">
+                    </div>
+                    <div class="true-nick_name">
+                        <span class="true_name">Tokisaki Nino<span class="nick_name"> (Vampire Di Nang)</span></span>
+                        <span class="pronuns">Nino/Nio/He/Him/You/Senpai/Kouhai</span>
+                        <ul class="weiu">
+                            <li><span class="follower">2000</span>follower</li>
+                            <li><span class="following">7700</span>following</li>
+                            <li><span class="count_post">400</span>posts</li>
+                            <li><span class="views">7000</span>view</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="more_options">
+                    <button class="follow">Follow</button>
+                    <button class="more">...</button>
+                </div>
+            </div>
         </div>
     </div>
 
