--- a/index_about.html
+++ b/index_about.html
@@ -86,16 +86,15 @@
                         <span class="true_name">Tokisaki Nino<span class="nick_name"> (Vampire Di Nang)</span></span>
                         <span class="pronuns">Nino/Nio/He/Him/You/Senpai/Kouhai</span>
                         <ul class="weiu">
-                            <li><span class="follower">2000</span>follower</li>
-                            <li><span class="following">7700</span>following</li>
-                            <li><span class="count_post">400</span>posts</li>
-                            <li><span class="views">7000</span>view</li>
+                            <li><span class="following">7700</span> Following</li>
+                            <li><span class="count_post">400</span> Posts</li>
+                            <li><span class="views">7000</span> View</li>
                         </ul>
                     </div>
                 </div>
                 <div class="more_options">
-                    <button class="follow">Follow</button>
-                    <button class="more">...</button>
+                    <div class="more_options_"><ion-icon class="follow_icon" name="add-outline"></ion-icon><span class="follow">Follow</span></div>
+                    <div class="more_options_ like"><ion-icon name="heart-outline"></ion-icon></div>
                 </div>
             </div>
         </div>
@@ -105,10 +104,14 @@
 
     <script src="./assets/js/js_index.js"></script>
     <script src="./assets/js/js_scrolltotop.js"></script>
+    
     <script>
         function toggleMode() {
             document.body.classList.toggle('dark-mode');
         }
-        </script>
+    </script>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     </body>
 </html>
