--- a/index_about.html
+++ b/index_about.html
@@ -81,9 +81,10 @@
                     <div class="img_avatar">
                         <img class="img_avatar" src="./assets/image/Avt.jpg" alt="avt">
                         <img class="frame_avatar" src="./assets/image/frame_1.webp" alt="frame">
+                        <div class="status_discord"></div>
                     </div>
                     <div class="true-nick_name">
-                        <span class="true_name">Tokisaki Nino<span class="nick_name"> (Vampire Di Nang)</span></span>
+                        <span class="true_name">Tokisaki Nino<span class="nick_name"> (Nio) </span>🍀</span>
                         <span class="pronuns">Nino/Nio/He/Him/You/Senpai/Kouhai</span>
                         <ul class="weiu">
                             <li><span class="following">7700</span> Following</li>
@@ -97,6 +98,10 @@
                     <div class="more_options_ like"><ion-icon name="heart-outline"></ion-icon></div>
                 </div>
             </div>
+        </div>
+
+        <div id="main_about_scroll-parent">
+            <div class="main_about_scroll-child"></div>
         </div>
     </div>
 
