--- a/index_about.html
+++ b/index_about.html
@@ -101,7 +101,25 @@
         </div>
 
         <div id="main_about_scroll-parent">
-            <div class="main_about_scroll-child"></div>
+            <div class="main_about_scroll-child">
+                <ul class="menu_options">
+                    <li>Basic</li>
+                    <li>Posts</li>
+                    <li>Music</li>
+                    <li>Donate</li>
+                    <li>Games</li>
+                    <li>Contacts</li>
+                </ul>
+                <div class="basic_infor">
+                    <p>Yahoo! I'm Nino! Hobbies are usually listening to music, playing games, watching movies or going on adventures. One player solo/duo.</p>
+
+                    <img class="img_banner" src="./assets/image/Elysia.full.3784764.jpg" alt="elysia">
+
+                </div>
+                <div class="posts"></div>
+                <div class="posts"></div>
+                <div class="posts"></div>
+            </div>
         </div>
     </div>
 
