--- a/index_about.html
+++ b/index_about.html
@@ -106,21 +106,73 @@
                     <li>Basic</li>
                     <li>Posts</li>
                     <li>Music</li>
-                    <li>Donate</li>
+                    <li>Images</li>
                     <li>Games</li>
                     <li>Contacts</li>
                 </ul>
                 <div class="basic_infor">
-                    <p>Yahoo! I'm Nino! Hobbies are usually listening to music, playing games, watching movies or going on adventures. One player solo/duo.</p>
+                    <div class="iuwk_iag">
+                        <div class="infor_content_1">
+                            <span class="icon_ghim icon_ghim_1">📌</span>
+                            <p>[ Yahoo! I'm Nino! Hobbies are usually listening to music, playing games, watching movies or going on adventures. One player solo/duo.</p>
+                        </div>
+                        <div class="infor_content_1">
+                            <span class="icon_ghim icon_ghim_2">🍀</span>
+                            <p>[ "Tell me something. If i'm gonna stay around, what kind of person do you want me to be you? someone you work with? a competitor, who challenges you to sharpen your game? just another name on your long list of acquaintances, or... somebody more important than that? Depending on what you're hopping for, i can either play that part or become that person.".</p>
+                        </div>
+                        
 
-                    <img class="img_banner" src="./assets/image/Elysia.full.3784764.jpg" alt="elysia">
+                        <div class="card_information">
+                            <div class="card_information_code">
+                                <div class="card_top">
+                                    <ul>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                    </ul>
+                                </div>
 
+                                <div class="card_bottom">
+                                    <p>My Information <span class="code_color-pink">=</span> {</p>
+                                        <div class="code_key_value">
+                                            <p><span class="code_color_yellow">'name'</span>: <span class="code_color_yellow">'Tokisaki Nino'</span>,</p>
+                                            <p><span class="code_color_yellow">'age'</span>: <span class="code_color_yellow">'N/a'</span>,</p>
+                                            <p><span class="code_color_yellow">'gender'</span>: <span class="code_color_yellow">'Unknown'</span>,</p>
+                                            <p><span class="code_color_yellow">'skill'</span>:
+                                            <!-- <span class="code_color-pink">[</span><span class="code_color_yellow">'Js'</span>, -->
+                                            <span class="code_color_yellow">'Python'</span>, 
+                                            <span class="code_color_yellow">'C/C++/C#'</span>, 
+                                            <span class="code_color_yellow">'Html/css/Js/SCSS'</span>, 
+                                            <span class="code_color_yellow">'Java'</span>,
+                                            <span class="code_color_yellow">'...'</span><span class="code_color-pink">]</span>,
+                                            </p>
+                                            <p><span class="code_color_yellow">'game'</span>:
+                                            <span class="code_color-pink">[</span><a class="code_color_yellow" href="https://enka.network/u/855962110/" target="_blank">'Genshin Impact'</a>,
+                                            <span class="code_color_yellow">'Honkai Impact 3rd'</span>,
+                                            <span class="code_color_yellow">'...'</span><span class="code_color-pink">]</span>,</p>
+                                            <p><span class="code_color_yellow">'favorite'</span>:
+                                            <span class="code_color-pink">[</span><a class="code_color_yellow" href="https://anilist.co/user/NNino/" target="_blank">'Anime'</a>, 
+                                            <span class="code_color_yellow">'Music'</span>,
+                                            <span class="code_color_yellow">'Game'</span>,
+                                            <span class="code_color_yellow">'Coding'</span><span class="code_color-pink">]</span>,</p>
+                                            <div class="code_descript">
+                                            <p><span class="code_color_yellow">'descript'</span>:</p>
+                                            <p> <span class="code_color_yellow">'I am an Information Technology student. I'm a person who likes new things and I really like programming. I hope to become a good programmer in the future.'</span></p>
+                                            </div>
+                                        </div>
+                                    <p>}</p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="posts"></div>
+                    <div class="posts"></div>
+                    <div class="posts"></div>
                 </div>
-                <div class="posts"></div>
-                <div class="posts"></div>
-                <div class="posts"></div>
             </div>
-        </div>
+
+            <!-- <img class="img_banner" src="./assets/image/Elysia.full.3784764.jpg" alt="elysia"> -->
     </div>
 
     <button class="scrollToTopBtn "></button>
