--- a/index_about.html
+++ b/index_about.html
@@ -70,7 +70,6 @@
             <div id="stars3"></div>
         </div> -->
 
-
         <div class="background_img">
             <img src="./assets/image/bgr.jpg" alt="">
         </div>
@@ -105,9 +104,6 @@
                 <ul class="menu_options">
                     <li>Basic</li>
                     <li>Posts</li>
-                    <li>Music</li>
-                    <li>Images</li>
-                    <li>Games</li>
                     <li>Contacts</li>
                 </ul>
                 <div class="basic_infor">
@@ -116,11 +112,6 @@
                             <span class="icon_ghim icon_ghim_1">📌</span>
                             <p>[ Yahoo! I'm Nino! Hobbies are usually listening to music, playing games, watching movies or going on adventures. One player solo/duo.</p>
                         </div>
-                        <div class="infor_content_1">
-                            <span class="icon_ghim icon_ghim_2">🍀</span>
-                            <p>[ "Tell me something. If i'm gonna stay around, what kind of person do you want me to be you? someone you work with? a competitor, who challenges you to sharpen your game? just another name on your long list of acquaintances, or... somebody more important than that? Depending on what you're hopping for, i can either play that part or become that person.".</p>
-                        </div>
-                        
 
                         <div class="card_information">
                             <div class="card_information_code">
@@ -164,7 +155,11 @@
                                 </div>
                             </div>
                         </div>
-
+                        <div class="infor_content_1">
+                            <span class="icon_ghim icon_ghim_2">🍀</span>
+                            <p>[ "Tell me something. If i'm gonna stay around, what kind of person do you want me to be you? someone you work with? a competitor, who challenges you to sharpen your game? just another name on your long list of acquaintances, or... somebody more important than that? Depending on what you're hopping for, i can either play that part or become that person.".</p>
+                        </div>
+                        
                     </div>
                     <div class="posts"></div>
                     <div class="posts"></div>
@@ -172,8 +167,13 @@
                 </div>
             </div>
 
-            <!-- <img class="img_banner" src="./assets/image/Elysia.full.3784764.jpg" alt="elysia"> -->
+        </div>
+
+        <div class="img_banner_elysia">
+            <img class="img_banner" src="./assets/image/Elysia.full.3784764.jpg" alt="elysia">
+        </div>
     </div>
+
 
     <button class="scrollToTopBtn "></button>
 
