--- a/index_about.html
+++ b/index_about.html
@@ -167,7 +167,7 @@
                         <div id="items_scroll"></div>
                         <div class="jhagi_elysia">
                             <span class="best_quotes" style="font-size: 24px;">Herrcher of Human: Ego!</span>
-                            <img src="./assets/image/Elysia_916_9.jpg" alt="" class="elysia_paper">
+                            <img src="./assets/image/Elysia_916_13.jpg" alt="" class="elysia_paper" id="img_elysia_posts">
                             <span class="best_quotes">"If there is no heaven then I will be the one to create it"</span>
                         </div>
                     </div>
@@ -188,6 +188,7 @@
 
     <script src="./assets/js/js_index.js"></script>
     <script src="./assets/js/js_abouts.js"></script>
+    <!-- <script src="./assets/js/js_abouts_.js"></script> -->
     <script src="./assets/js/js_scrolltotop.js"></script>
     
     <script>
