--- a/index_about.html
+++ b/index_about.html
@@ -188,7 +188,7 @@
 
     <script src="./assets/js/js_index.js"></script>
     <script src="./assets/js/js_abouts.js"></script>
-    <!-- <script src="./assets/js/js_abouts_.js"></script> -->
+    <script src="./assets/js/js_abouts_.js"></script>
     <script src="./assets/js/js_scrolltotop.js"></script>
     
     <script>
