--- a/index_about.html
+++ b/index_about.html
@@ -88,7 +88,7 @@
                         <ul class="weiu">
                             <li><span class="following">11</span> Following</li>
                             <li><span class="count_post">[!!]</span> Posts</li>
-                            <li><span class="views">[!!]</span> View</li>
+                            <li><span id="totalViewCount" class="views">[!!]</span> View</li>
                         </ul>
                     </div>
                 </div>
