--- a/index_about.html
+++ b/index_about.html
@@ -83,7 +83,7 @@
                         <div class="status_discord"></div>
                     </div>
                     <div class="true-nick_name">
-                        <span class="true_name">Tokisaki Nino<span class="nick_name"> (Nio) </span>🍀</span>
+                        <span class="true_name">Tokisaki Nino<span class="nick_name"> (Guardian of Heaven) </span>🍀</span>
                         <span class="pronuns">Nino/Nio/He/Him/You/Senpai/Kouhai</span>
                         <ul class="weiu">
                             <li><span class="following">11</span> Following</li>
@@ -104,7 +104,7 @@
                 <ul class="menu_options">
                     <li>Basic</li>
                     <li>Posts</li>
-                    <li>Contacts</li>
+                    <!-- <li>Contacts</li> -->
                 </ul>
                 <div class="basic_infor">
                     <div class="iuwk_iag">
@@ -188,6 +188,7 @@
 
     <script src="./assets/js/js_index.js"></script>
     <script src="./assets/js/js_abouts.js"></script>
+    <script src="./assets/js/postUpdate.js"></script>
     <script src="./assets/js/js_abouts_.js"></script>
     <script src="./assets/js/js_scrolltotop.js"></script>
     
