--- a/index_about.html
+++ b/index_about.html
@@ -94,19 +94,20 @@
                 </div>
                 <div class="more_options">
                     <div class="more_options_"><ion-icon class="follow_icon" name="add-outline"></ion-icon><span class="follow">Follow</span></div>
-                    <div class="more_options_ like"><ion-icon name="heart-outline"></ion-icon></div>
+                    <div id="like_like" class="more_options_ like"><ion-icon name="heart-outline"></ion-icon></div>
                 </div>
             </div>
         </div>
 
         <div id="main_about_scroll-parent">
             <div class="main_about_scroll-child">
+
                 <ul class="menu_options">
-                    <li>Basic</li>
-                    <li>Posts</li>
+                    <li id="basic_status">Information</li>
+                    <li id="post_status">Posts</li>
                     <!-- <li>Contacts</li> -->
                 </ul>
-                <div class="basic_infor">
+                <div class="basic_infor active">
                     <div class="iuwk_iag">
                         <div class="infor_content_1">
                             <span class="icon_ghim icon_ghim_1">📌</span>
@@ -132,7 +133,7 @@
                                             <p><span class="code_color_yellow">'skill'</span>:
                                             <!-- <span class="code_color-pink">[</span><span class="code_color_yellow">'Js'</span>, -->
                                             <span class="code_color_yellow">'Python'</span>, 
-                                            <span class="code_color_yellow">'C/C++/C#'</span>, 
+                                            <!-- <span class="code_color_yellow">'C/C++/C#'</span>,  -->
                                             <span class="code_color_yellow">'Html/css/Js/SCSS'</span>, 
                                             <span class="code_color_yellow">'Java'</span>,
                                             <span class="code_color_yellow">'...'</span><span class="code_color-pink">]</span>,
