--- a/index_about.html
+++ b/index_about.html
@@ -83,10 +83,10 @@
                         <div class="status_discord"></div>
                     </div>
                     <div class="true-nick_name">
-                        <span class="true_name">Tokisaki Nino<span class="nick_name"> (Guardian of Heaven) </span>🍀</span>
-                        <span class="pronuns">Nino/Nio/He/Him/You/Senpai/Kouhai</span>
+                        <span class="true_name">Tokisaki Nino<span class="nick_name"> (Guardian of Heaven) </span></span>
+                        <span class="pronuns">🌠Nino/Nio/He/Him/You/Senpai/Kouhai</span>
                         <ul class="weiu">
-                            <li><span class="following">11</span> Following</li>
+                            <li><span class="following">[11]</span> Following</li>
                             <li><span class="count_post">[!!]</span> Posts</li>
                             <li><span id="totalViewCount" class="views">[!!]</span> View</li>
                         </ul>
@@ -103,8 +103,8 @@
             <div class="main_about_scroll-child">
 
                 <ul class="menu_options">
-                    <li id="basic_status">Information</li>
-                    <li id="post_status">Posts</li>
+                    <li id="basic_status" class="active_">✨Information</li>
+                    <li id="post_status">🎨Posts</li>
                     <!-- <li>Contacts</li> -->
                 </ul>
                 <div class="basic_infor active">
