--- a/index_about.html
+++ b/index_about.html
@@ -93,8 +93,14 @@
                     </div>
                 </div>
                 <div class="more_options">
-                    <div class="more_options_"><ion-icon class="follow_icon" name="add-outline"></ion-icon><span class="follow">Follow</span></div>
-                    <div id="like_like" class="more_options_ like"><ion-icon name="heart-outline"></ion-icon></div>
+                    <div class="more_options_">
+                        <!-- <ion-icon class="follow_icon" name="add-outline"></ion-icon> -->
+                        <ion-icon class="follow_icon" name="logo-github"></ion-icon>
+                        <span class="follow">Follow</span></div>
+                    <div id="like_like" class="more_options_ like">
+                        <ion-icon class="like_icons like_false active" name="heart-outline"></ion-icon>
+                        <ion-icon class="like_icons like_true" name="heart"></ion-icon>
+                    </div>
                 </div>
             </div>
         </div>
